--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                 </a>
 
                 <!-- CointiPly -->
-                <a href="http://cointiply.com/r/1no5Y" target="_blank" class="link-item flex justify-between items-center">
+                <a href="https://cointiply.com/r/mOnqp" target="_blank" class="link-item flex justify-between items-center">
                     <span class="font-semibold text-sm text-gray-800">CointiPly (Offerwalls)</span>
                     <span class="tag-badge tag-high-ref">20% REF</span>
                 </a>
