--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
                 <h2 class="micro-header font-headline font-bold text-gray-800">ESSENTIAL UTILITIES & HUBS</h2>
 
                 <!-- Binance -->
-                <a href="https://accounts.binance.com/en/register?ref=TAWUFT3R" target="_blank" class="link-item flex justify-between items-center">
+                <a href="https://accounts.binance.com/register?ref=49685937" target="_blank" class="link-item flex justify-between items-center">
                     <span class="font-semibold text-sm text-gray-800">Binance</span>
                     <span class="tag-badge tag-util">EXCHANGE</span>
                 </a>
